--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -4,7 +4,7 @@ languageCode = "en-us"
 # site title 
 title = "Bursview Robotics 98549D"
 # theme
-theme = "northendlab-light"
+theme = "portfolio-f"
 # post pagination
 paginate = "5"
 # post excerpt
